Remove version from theme css

--- a/src/main/resources/io/jenkins/plugins/materialtheme/material-theme.css
+++ b/src/main/resources/io/jenkins/plugins/materialtheme/material-theme.css
@@ -76,5 +76,5 @@ a, a:link, a:hover, a:visited {
 
 .jenkins_ver:after {
     margin-left: 15px;
-    content:"Material Theme Plugin v0.1.0"
+    content:"Material Theme Plugin"
 }
