--- a/src/main/webapp/material-theme.css
+++ b/src/main/webapp/material-theme.css
@@ -1,7 +1,10 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,700,500,300);
 @import url(https://fonts.googleapis.com/css?family=Roboto+Mono:400,700,500,300);
 
-[data-theme=material-red], .app-theme-picker__picker[data-theme=material-red], [data-theme=material-indigo], .app-theme-picker__picker[data-theme=material-indigo] {
+[data-theme=material-red], .app-theme-picker__picker[data-theme=material-red],
+[data-theme=material-indigo], .app-theme-picker__picker[data-theme=material-indigo],
+[data-theme=material-grey], .app-theme-picker__picker[data-theme=material-grey] ,
+[data-theme=material-light-blue], .app-theme-picker__picker[data-theme=material-light-blue] {
     /* Font */
     --font-family-sans: Roboto !important;
 
@@ -50,7 +53,7 @@
 }
 
 /* Manually change some header settings (these aren't available through theme.less */
-[data-theme=material-red] #header, [data-theme=material-indigo] #header {
+[data-theme=material-red] #header, [data-theme=material-indigo] #header, [data-theme=material-grey] #header, [data-theme=material-light-blue] #header {
     height: 64px;
     text-transform: uppercase;
     padding: 12px 10px;
@@ -58,36 +61,38 @@
 
 /* Change tab background so tabs don't float when there are multiple rows
 this doesn't look great, but I think it's less bad than when it's left white. */
-[data-theme=material-red] .tabBarFrame, [data-theme=material-indigo] .tabBarFrame {
+[data-theme=material-red] .tabBarFrame, [data-theme=material-indigo] .tabBarFrame, [data-theme=material-grey] .tabBarFrame, [data-theme=material-light-blue] .tabBarFrame {
     position: relative;
     background: var(--very-light-grey);
 }
 
-[data-theme=material-red] .yui-button button, [data-theme=material-indigo] .yui-button button {
+[data-theme=material-red] .yui-button button, [data-theme=material-indigo] .yui-button button, [data-theme=material-grey] .yui-button button, [data-theme=material-light-blue] .yui-button button {
     text-transform: uppercase;
 }
 
-[data-theme=material-red] a, [data-theme=material-indigo] a,
-[data-theme=material-red] a:link, [data-theme=material-indigo] a:link,
-[data-theme=material-red] a:hover, [data-theme=material-indigo] a:hover,
-[data-theme=material-red] a:visited, [data-theme=material-indigo] a:visited
+[data-theme=material-red] a, [data-theme=material-indigo] a, [data-theme=material-grey] a, [data-theme=material-light-blue] a,
+[data-theme=material-red] a:link, [data-theme=material-indigo] a:link, [data-theme=material-grey] a:link, [data-theme=material-light-blue] a:link,
+[data-theme=material-red] a:hover, [data-theme=material-indigo] a:hover, [data-theme=material-grey] a:hover, [data-theme=material-light-blue] a:hover,
+[data-theme=material-red] a:visited, [data-theme=material-indigo] a:visited, [data-theme=material-grey] a:visited, [data-theme=material-light-blue] a:visited
 {
     text-decoration: none!important;
     color: var(--material-primary);
 }
 
-[data-theme=material-red] .jenkins_ver:after , [data-theme=material-indigo] .jenkins_ver:after {
+[data-theme=material-red] .jenkins_ver:after, [data-theme=material-indigo] .jenkins_ver:after, [data-theme=material-grey] .jenkins_ver:after, [data-theme=material-light-blue] .jenkins_ver:after {
     margin-left: 15px;
     content:"Material Theme Plugin"
 }
 
 /* Console readablity improvements */
-[data-theme=material-red] .console-output, [data-theme=material-indigo] .console-output {
+[data-theme=material-red] .console-output, [data-theme=material-indigo] .console-output, [data-theme=material-grey] .console-output, [data-theme=material-light-blue] .console-output {
     padding: 10px 20px;
 }
 
 [data-theme=material-red] .console-output, [data-theme=material-indigo] .console-output,
 [data-theme=material-red] .console-output *, [data-theme=material-indigo] .console-output *
+[data-theme=material-grey] .console-output, [data-theme=material-light-blue] .console-output,
+[data-theme=material-grey] .console-output *, [data-theme=material-light-blue] .console-output *
 {
   position: relative;
   font-family: Roboto Mono,monospace!important;
