--- a/src/main/webapp/resources/less/core-theme.less
+++ b/src/main/webapp/resources/less/core-theme.less
@@ -1,5 +1,5 @@
 // Copyright (c) 2016 Afonso F
-[data-theme=material-red], [data-theme=material-indigo] {
+[data-theme=material-red], [data-theme=material-indigo], [data-theme=material-grey], [data-theme=material-light-blue] {
   // Copied from functions.less
   // Change to use masks - so we can change svg icon color
   .icon-img(@url, @icon-color) {
