--- a/src/main/webapp/material-theme.css
+++ b/src/main/webapp/material-theme.css
@@ -93,6 +93,10 @@ this doesn't look great, but I think it's less bad than when it's left white. */
   font-family: Roboto Mono,monospace!important;
   font-size: 14px;
   background: #263238;
-  color: #e9eded;
   cursor: text;
+}
+
+[data-theme=material-red] pre.console-output, [data-theme=material-indigo] pre.console-output
+{
+  color: #e9eded!important;
 }
