--- a/src/main/webapp/material-theme.css
+++ b/src/main/webapp/material-theme.css
@@ -1,5 +1,114 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,700,500,300);
-@import url(https://fonts.googleapis.com/css?family=Roboto+Mono:400,700,500,300);
+/* roboto-300 - latin */
+@font-face {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 300;
+    src: url('../plugin/material-theme/resources/fonts/roboto-v30-latin-300.eot'); /* IE9 Compat Modes */
+    src: local(''),
+        url('../plugin/material-theme/resources/fonts/roboto-v30-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+        url('../plugin/material-theme/resources/fonts/roboto-v30-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
+        url('../plugin/material-theme/resources/fonts/roboto-v30-latin-300.woff') format('woff'), /* Modern Browsers */
+        url('../plugin/material-theme/resources/fonts/roboto-v30-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
+        url('../plugin/material-theme/resources/fonts/roboto-v30-latin-300.svg#Roboto') format('svg'); /* Legacy iOS */
+}
+
+/* roboto-regular - latin */
+@font-face {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../plugin/material-theme/resources/fonts/roboto-v30-latin-regular.eot'); /* IE9 Compat Modes */
+    src: local(''),
+        url('../plugin/material-theme/resources/fonts/roboto-v30-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+        url('../plugin/material-theme/resources/fonts/roboto-v30-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+        url('../plugin/material-theme/resources/fonts/roboto-v30-latin-regular.woff') format('woff'), /* Modern Browsers */
+        url('../plugin/material-theme/resources/fonts/roboto-v30-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+        url('../plugin/material-theme/resources/fonts/roboto-v30-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
+}
+
+/* roboto-500 - latin */
+@font-face {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    src: url('../plugin/material-theme/resources/fonts/roboto-v30-latin-500.eot'); /* IE9 Compat Modes */
+    src: local(''),
+        url('../plugin/material-theme/resources/fonts/roboto-v30-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+        url('../plugin/material-theme/resources/fonts/roboto-v30-latin-500.woff2') format('woff2'), /* Super Modern Browsers */
+        url('../plugin/material-theme/resources/fonts/roboto-v30-latin-500.woff') format('woff'), /* Modern Browsers */
+        url('../plugin/material-theme/resources/fonts/roboto-v30-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
+        url('../plugin/material-theme/resources/fonts/roboto-v30-latin-500.svg#Roboto') format('svg'); /* Legacy iOS */
+}
+
+/* roboto-700 - latin */
+@font-face {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    src: url('../plugin/material-theme/resources/fonts/roboto-v30-latin-700.eot'); /* IE9 Compat Modes */
+    src: local(''),
+        url('../plugin/material-theme/resources/fonts/roboto-v30-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+        url('../plugin/material-theme/resources/fonts/roboto-v30-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+        url('../plugin/material-theme/resources/fonts/roboto-v30-latin-700.woff') format('woff'), /* Modern Browsers */
+        url('../plugin/material-theme/resources/fonts/roboto-v30-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+        url('../plugin/material-theme/resources/fonts/roboto-v30-latin-700.svg#Roboto') format('svg'); /* Legacy iOS */
+}
+  
+/* roboto-mono-300 - latin */
+@font-face {
+    font-family: 'Roboto Mono';
+    font-style: normal;
+    font-weight: 300;
+    src: url('../plugin/material-theme/resources/fonts/roboto-mono-v22-latin-300.eot'); /* IE9 Compat Modes */
+    src: local(''),
+        url('../plugin/material-theme/resources/fonts/roboto-mono-v22-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+        url('../plugin/material-theme/resources/fonts/roboto-mono-v22-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
+        url('../plugin/material-theme/resources/fonts/roboto-mono-v22-latin-300.woff') format('woff'), /* Modern Browsers */
+        url('../plugin/material-theme/resources/fonts/roboto-mono-v22-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
+        url('../plugin/material-theme/resources/fonts/roboto-mono-v22-latin-300.svg#RobotoMono') format('svg'); /* Legacy iOS */
+}
+
+/* roboto-mono-regular - latin */
+@font-face {
+    font-family: 'Roboto Mono';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../plugin/material-theme/resources/fonts/roboto-mono-v22-latin-regular.eot'); /* IE9 Compat Modes */
+    src: local(''),
+        url('../plugin/material-theme/resources/fonts/roboto-mono-v22-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+        url('../plugin/material-theme/resources/fonts/roboto-mono-v22-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+        url('../plugin/material-theme/resources/fonts/roboto-mono-v22-latin-regular.woff') format('woff'), /* Modern Browsers */
+        url('../plugin/material-theme/resources/fonts/roboto-mono-v22-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+        url('../plugin/material-theme/resources/fonts/roboto-mono-v22-latin-regular.svg#RobotoMono') format('svg'); /* Legacy iOS */
+}
+
+/* roboto-mono-500 - latin */
+@font-face {
+    font-family: 'Roboto Mono';
+    font-style: normal;
+    font-weight: 500;
+    src: url('../plugin/material-theme/resources/fonts/roboto-mono-v22-latin-500.eot'); /* IE9 Compat Modes */
+    src: local(''),
+        url('../plugin/material-theme/resources/fonts/roboto-mono-v22-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+        url('../plugin/material-theme/resources/fonts/roboto-mono-v22-latin-500.woff2') format('woff2'), /* Super Modern Browsers */
+        url('../plugin/material-theme/resources/fonts/roboto-mono-v22-latin-500.woff') format('woff'), /* Modern Browsers */
+        url('../plugin/material-theme/resources/fonts/roboto-mono-v22-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
+        url('../plugin/material-theme/resources/fonts/roboto-mono-v22-latin-500.svg#RobotoMono') format('svg'); /* Legacy iOS */
+}
+
+/* roboto-mono-700 - latin */
+@font-face {
+    font-family: 'Roboto Mono';
+    font-style: normal;
+    font-weight: 700;
+    src: url('../plugin/material-theme/resources/fonts/roboto-mono-v22-latin-700.eot'); /* IE9 Compat Modes */
+    src: local(''),
+        url('../plugin/material-theme/resources/fonts/roboto-mono-v22-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+        url('../plugin/material-theme/resources/fonts/roboto-mono-v22-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+        url('../plugin/material-theme/resources/fonts/roboto-mono-v22-latin-700.woff') format('woff'), /* Modern Browsers */
+        url('../plugin/material-theme/resources/fonts/roboto-mono-v22-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+        url('../plugin/material-theme/resources/fonts/roboto-mono-v22-latin-700.svg#RobotoMono') format('svg'); /* Legacy iOS */
+}
 
 [data-theme=material-red], .app-theme-picker__picker[data-theme=material-red],
 [data-theme=material-indigo], .app-theme-picker__picker[data-theme=material-indigo],
