--- a/src/main/webapp/resources/less/light-theme.less
+++ b/src/main/webapp/resources/less/light-theme.less
@@ -4,7 +4,7 @@
 @color-text: #444;
 @color-link: #26a69a;
 @color-grey: #9E9E9E;
-@color-green: #009688;
+@color-green: #43A047;
 @color-yellow: #FFC107;
 @color-red: #F44336;
 @color-white: #fff;
