feat(theme): adapt theme for Bonita needs

--- a/src/main/webapp/resources/less/base/core-theme.less
+++ b/src/main/webapp/resources/less/base/core-theme.less
@@ -1,5 +1,5 @@
 // Copyright (c) 2016 Afonso F
-[data-theme=jenkins-bonita]
+:not([data-theme=jenkins-bonita-login-page])
 {
   // Copied from functions.less
   // Change to use masks - so we can change svg icon color
