feat(theme): Fix a couple of issues (#2)
* feat(theme): Fix a couple of issues

--- a/src/main/webapp/resources/less/bonita-colors.less
+++ b/src/main/webapp/resources/less/bonita-colors.less
@@ -1,9 +1,11 @@
 * {
   --primary: var(--material-primary);
-  --button-color--primary: var(--material-lightgray);
+  --button-color--primary: var(--material-white);
 
-  --material-primary: #E22936;
-  --material-secondary: #0A4561;
+  --material-primary: #0A4561;
+  --material-secondary: #E22936;
+  --material-warning: #c4a000;
+  --material-white: #ffffff;
   --material-lightgray: #f0f0f0;
   --material-mediumgray: #ccc;
   --material-darkgray: #424242;
