--- a/src/main/webapp/resources/less/core-theme.less
+++ b/src/main/webapp/resources/less/core-theme.less
@@ -4,7 +4,8 @@
 [data-theme=material-grey],
 [data-theme=material-light-blue],
 [data-theme=material-green],
-[data-theme=material-yellow]
+[data-theme=material-yellow],
+[data-theme=material-purple]
 {
   // Copied from functions.less
   // Change to use masks - so we can change svg icon color
