--- a/src/main/webapp/resources/less/light-theme.less
+++ b/src/main/webapp/resources/less/light-theme.less
@@ -6,6 +6,7 @@
 @color-grey: #9E9E9E;
 @color-green: #43A047;
 @color-yellow: #FFC107;
+@color-purple: #9C27B0;
 @color-red: #F44336;
 @color-white: #fff;
 @color-black: #263238;
