--- a/src/main/webapp/resources/less/core-theme.less
+++ b/src/main/webapp/resources/less/core-theme.less
@@ -5,7 +5,8 @@
 [data-theme=material-light-blue],
 [data-theme=material-green],
 [data-theme=material-yellow],
-[data-theme=material-purple]
+[data-theme=material-purple],
+[data-theme=material-lime]
 {
   // Copied from functions.less
   // Change to use masks - so we can change svg icon color
