--- a/src/main/webapp/resources/less/light-theme.less
+++ b/src/main/webapp/resources/less/light-theme.less
@@ -7,6 +7,7 @@
 @color-green: #43A047;
 @color-yellow: #FFC107;
 @color-purple: #9C27B0;
+@color-lime: #AFB42B;
 @color-red: #F44336;
 @color-white: #fff;
 @color-black: #263238;
