--- a/src/main/webapp/material-theme.css
+++ b/src/main/webapp/material-theme.css
@@ -116,7 +116,8 @@
 [data-theme=material-light-blue], .app-theme-picker__picker[data-theme=material-light-blue],
 [data-theme=material-green], .app-theme-picker__picker[data-theme=material-green],
 [data-theme=material-yellow], .app-theme-picker__picker[data-theme=material-yellow],
-[data-theme=material-purple], .app-theme-picker__picker[data-theme=material-purple]
+[data-theme=material-purple], .app-theme-picker__picker[data-theme=material-purple],
+[data-theme=material-lime], .app-theme-picker__picker[data-theme=material-lime]
 {
     /* Font */
     --font-family-sans: Roboto !important;
@@ -172,7 +173,8 @@
 [data-theme=material-light-blue] #header,
 [data-theme=material-green] #header,
 [data-theme=material-yellow] #header,
-[data-theme=material-purple] #header
+[data-theme=material-purple] #header,
+[data-theme=material-lime] #header
 {
     height: 64px;
     text-transform: uppercase;
@@ -187,7 +189,8 @@ this doesn't look great, but I think it's less bad than when it's left white. */
 [data-theme=material-light-blue] .tabBarFrame,
 [data-theme=material-green] .tabBarFrame,
 [data-theme=material-yellow] .tabBarFrame,
-[data-theme=material-purple] .tabBarFrame
+[data-theme=material-purple] .tabBarFrame,
+[data-theme=material-lime] .tabBarFrame
 {
     position: relative;
     background: var(--very-light-grey);
@@ -199,7 +202,8 @@ this doesn't look great, but I think it's less bad than when it's left white. */
 [data-theme=material-light-blue] .yui-button button,
 [data-theme=material-green] .yui-button button,
 [data-theme=material-yellow] .yui-button button,
-[data-theme=material-purple] .yui-button button
+[data-theme=material-purple] .yui-button button,
+[data-theme=material-lime] .yui-button button
 {
     text-transform: uppercase;
 }
@@ -210,7 +214,8 @@ this doesn't look great, but I think it's less bad than when it's left white. */
 [data-theme=material-light-blue] a, [data-theme=material-light-blue] a:link, [data-theme=material-light-blue] a:hover, [data-theme=material-light-blue] a:visited,
 [data-theme=material-green] a, [data-theme=material-green] a:link, [data-theme=material-green] a:hover, [data-theme=material-green] a:visited,
 [data-theme=material-yellow] a, [data-theme=material-yellow] a:link, [data-theme=material-yellow] a:hover, [data-theme=material-yellow] a:visited,
-[data-theme=material-purple] a, [data-theme=material-purple] a:link, [data-theme=material-purple] a:hover, [data-theme=material-purple] a:visited
+[data-theme=material-purple] a, [data-theme=material-purple] a:link, [data-theme=material-purple] a:hover, [data-theme=material-purple] a:visited,
+[data-theme=material-lime] a, [data-theme=material-lime] a:link, [data-theme=material-lime] a:hover, [data-theme=material-lime] a:visited
 {
     text-decoration: none!important;
 }
@@ -221,7 +226,8 @@ this doesn't look great, but I think it's less bad than when it's left white. */
 [data-theme=material-light-blue] .jenkins_ver:after,
 [data-theme=material-green] .jenkins_ver:after,
 [data-theme=material-yellow] .jenkins_ver:after,
-[data-theme=material-purple] .jenkins_ver:after
+[data-theme=material-purple] .jenkins_ver:after,
+[data-theme=material-lime] .jenkins_ver:after
 {
     margin-left: 15px;
     content:"Material Theme Plugin"
@@ -234,7 +240,8 @@ this doesn't look great, but I think it's less bad than when it's left white. */
 [data-theme=material-light-blue] .console-output,
 [data-theme=material-green] .console-output,
 [data-theme=material-yellow] .console-output,
-[data-theme=material-purple] .console-output
+[data-theme=material-purple] .console-output,
+[data-theme=material-lime] .console-output
 {
     padding: 10px 20px;
 }
@@ -245,7 +252,8 @@ this doesn't look great, but I think it's less bad than when it's left white. */
 [data-theme=material-light-blue] .console-output, [data-theme=material-light-blue] .console-output *,
 [data-theme=material-green] .console-output, [data-theme=material-green] .console-output *,
 [data-theme=material-yellow] .console-output, [data-theme=material-yellow] .console-output *,
-[data-theme=material-purple] .console-output, [data-theme=material-purple] .console-output *
+[data-theme=material-purple] .console-output, [data-theme=material-purple] .console-output *,
+[data-theme=material-lime] .console-output, [data-theme=material-lime] .console-output *
 {
   position: relative;
   font-family: Roboto Mono,monospace!important;
@@ -260,7 +268,8 @@ this doesn't look great, but I think it's less bad than when it's left white. */
 [data-theme=material-light-blue] pre.console-output,
 [data-theme=material-green] pre.console-output,
 [data-theme=material-yellow] pre.console-output,
-[data-theme=material-purple] pre.console-output
+[data-theme=material-purple] pre.console-output,
+[data-theme=material-lime] pre.console-output
 {
   color: #e9eded!important;
 }
