--- a/src/main/webapp/resources/less/core-theme.less
+++ b/src/main/webapp/resources/less/core-theme.less
@@ -6,7 +6,8 @@
 [data-theme=material-green],
 [data-theme=material-yellow],
 [data-theme=material-purple],
-[data-theme=material-lime]
+[data-theme=material-lime],
+[data-theme=material-amber]
 {
   // Copied from functions.less
   // Change to use masks - so we can change svg icon color
