--- a/src/main/webapp/material-theme.css
+++ b/src/main/webapp/material-theme.css
@@ -117,7 +117,8 @@
 [data-theme=material-green], .app-theme-picker__picker[data-theme=material-green],
 [data-theme=material-yellow], .app-theme-picker__picker[data-theme=material-yellow],
 [data-theme=material-purple], .app-theme-picker__picker[data-theme=material-purple],
-[data-theme=material-lime], .app-theme-picker__picker[data-theme=material-lime]
+[data-theme=material-lime], .app-theme-picker__picker[data-theme=material-lime],
+[data-theme=material-amber], .app-theme-picker__picker[data-theme=material-amber]
 {
     /* Font */
     --font-family-sans: Roboto !important;
@@ -174,7 +175,8 @@
 [data-theme=material-green] #header,
 [data-theme=material-yellow] #header,
 [data-theme=material-purple] #header,
-[data-theme=material-lime] #header
+[data-theme=material-lime] #header,
+[data-theme=material-amber] #header
 {
     height: 64px;
     text-transform: uppercase;
@@ -190,7 +192,8 @@ this doesn't look great, but I think it's less bad than when it's left white. */
 [data-theme=material-green] .tabBarFrame,
 [data-theme=material-yellow] .tabBarFrame,
 [data-theme=material-purple] .tabBarFrame,
-[data-theme=material-lime] .tabBarFrame
+[data-theme=material-lime] .tabBarFrame,
+[data-theme=material-amber] .tabBarFrame
 {
     position: relative;
     background: var(--very-light-grey);
@@ -203,7 +206,8 @@ this doesn't look great, but I think it's less bad than when it's left white. */
 [data-theme=material-green] .yui-button button,
 [data-theme=material-yellow] .yui-button button,
 [data-theme=material-purple] .yui-button button,
-[data-theme=material-lime] .yui-button button
+[data-theme=material-lime] .yui-button button,
+[data-theme=material-amber] .yui-button button
 {
     text-transform: uppercase;
 }
@@ -215,7 +219,8 @@ this doesn't look great, but I think it's less bad than when it's left white. */
 [data-theme=material-green] a, [data-theme=material-green] a:link, [data-theme=material-green] a:hover, [data-theme=material-green] a:visited,
 [data-theme=material-yellow] a, [data-theme=material-yellow] a:link, [data-theme=material-yellow] a:hover, [data-theme=material-yellow] a:visited,
 [data-theme=material-purple] a, [data-theme=material-purple] a:link, [data-theme=material-purple] a:hover, [data-theme=material-purple] a:visited,
-[data-theme=material-lime] a, [data-theme=material-lime] a:link, [data-theme=material-lime] a:hover, [data-theme=material-lime] a:visited
+[data-theme=material-lime] a, [data-theme=material-lime] a:link, [data-theme=material-lime] a:hover, [data-theme=material-lime] a:visited,
+[data-theme=material-amber] a, [data-theme=material-amber] a:link, [data-theme=material-amber] a:hover, [data-theme=material-amber] a:visited
 {
     text-decoration: none!important;
 }
@@ -227,7 +232,8 @@ this doesn't look great, but I think it's less bad than when it's left white. */
 [data-theme=material-green] .jenkins_ver:after,
 [data-theme=material-yellow] .jenkins_ver:after,
 [data-theme=material-purple] .jenkins_ver:after,
-[data-theme=material-lime] .jenkins_ver:after
+[data-theme=material-lime] .jenkins_ver:after,
+[data-theme=material-amber] .jenkins_ver:after
 {
     margin-left: 15px;
     content:"Material Theme Plugin"
@@ -241,7 +247,8 @@ this doesn't look great, but I think it's less bad than when it's left white. */
 [data-theme=material-green] .console-output,
 [data-theme=material-yellow] .console-output,
 [data-theme=material-purple] .console-output,
-[data-theme=material-lime] .console-output
+[data-theme=material-lime] .console-output,
+[data-theme=material-amber] .console-output
 {
     padding: 10px 20px;
 }
@@ -253,7 +260,8 @@ this doesn't look great, but I think it's less bad than when it's left white. */
 [data-theme=material-green] .console-output, [data-theme=material-green] .console-output *,
 [data-theme=material-yellow] .console-output, [data-theme=material-yellow] .console-output *,
 [data-theme=material-purple] .console-output, [data-theme=material-purple] .console-output *,
-[data-theme=material-lime] .console-output, [data-theme=material-lime] .console-output *
+[data-theme=material-lime] .console-output, [data-theme=material-lime] .console-output *,
+[data-theme=material-amber] .console-output, [data-theme=material-amber] .console-output *
 {
   position: relative;
   font-family: Roboto Mono,monospace!important;
@@ -269,7 +277,8 @@ this doesn't look great, but I think it's less bad than when it's left white. */
 [data-theme=material-green] pre.console-output,
 [data-theme=material-yellow] pre.console-output,
 [data-theme=material-purple] pre.console-output,
-[data-theme=material-lime] pre.console-output
+[data-theme=material-lime] pre.console-output,
+[data-theme=material-amber] pre.console-output
 {
   color: #e9eded!important;
 }
