--- a/src/main/webapp/resources/less/light-theme.less
+++ b/src/main/webapp/resources/less/light-theme.less
@@ -8,6 +8,7 @@
 @color-yellow: #FFC107;
 @color-purple: #9C27B0;
 @color-lime: #AFB42B;
+@color-amber: #FF6F00;
 @color-red: #F44336;
 @color-white: #fff;
 @color-black: #263238;
